--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -42,6 +42,8 @@
     "clientPackageManager": "npm",
     "clientThemeVariant": "",
     "enableGradleEnterprise": false,
-    "languages": ["en", "fr"]
+    "languages": ["en", "fr"],
+    "lastLiquibaseTimestamp": 1675112272000,
+    "entities": ["BankAccount", "CreditCard"]
   }
 }
